force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <pluralLabel>Customers</pluralLabel>
    <nameField>
        <label>Customer Number</label>
        <type>AutoNumber</type>
        <displayFormat>CUST-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>