force-app/main/default/objects/Customer__c/fields/Driving_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Number__c</fullName>
    <label>Driving License Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>