force-app/main/default/objects/Customer__c/fields/License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiry_Date__c</fullName>
    <label>License Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>