force-app/main/default/objects/Customer__c/validationRules/Valid_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Email_Format</fullName>
    <active>true</active>
    <description>Validates that the email field contains a properly formatted email address.</description>
    <errorConditionFormula>NOT(ISBLANK(Email__c)) &amp;&amp; NOT(REGEX(Email__c, '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$'))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address (e.g., name@example.com).</errorMessage>
</ValidationRule>